--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config",
+    "dev": "webpack --config --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
